crates/test-files/fixtures/compile_errors/call_static_function_without_double_colon.fe
struct Bar:
    pub fn call_me():
        pass

contract Foo:

    fn bar(self):
        Bar.call_me()